[package]
name = "hermitq"
version = "0.1.0"
authors = ["Agustin Borgna <agustinborgna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.2"
fraction = "0.8.0"
itertools = "0.10.0"
petgraph = "0.5.1"
